Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2555

Null pointer deref in ldiskfs_ext_calc_credits_for_insert

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0, Lustre 2.1.5
    • Lustre 2.1.5
    • 3
    • 5979

      Hit this oops while running racer in a loop, seems to be a call from quota code into ldiskfs.

      [232945.455907] BUG: unable to handle kernel NULL pointer dereference at 0000000000000002
      [232945.456006] IP: [<ffffffffa07478fe>] ldiskfs_ext_calc_credits_for_insert+0x2e/0x40 [ldiskfs]
      [232945.456006] PGD 89330067 PUD 4651c067 PMD 0 
      [232945.456006] Oops: 0000 [#1] SMP DEBUG_PAGEALLOC
      [232945.456006] last sysfs file: /sys/devices/system/cpu/possible
      [232945.456006] CPU 0 
      [232945.456006] Modules linked in: lustre ofd osp lod ost mdt osd_ldiskfs fsfilt_ldiskfs ldiskfs mdd mgs lquota obdecho mgc lov osc mdc lmv fid fld ptlrpc obdclass lvfs ksocklnd lnet libcfs exportfs jbd sha512_generic sha256_generic ext4 mbcache jbd2 virtio_balloon virtio_console i2c_piix4 i2c_core virtio_blk virtio_net virtio_pci virtio_ring virtio pata_acpi ata_generic ata_piix dm_mirror dm_region_hash dm_log dm_mod nfs lockd fscache nfs_acl auth_rpcgss sunrpc be2iscsi bnx2i cnic uio ipv6 cxgb3i libcxgbi cxgb3 mdio libiscsi_tcp qla4xxx iscsi_boot_sysfs libiscsi scsi_transport_iscsi [last unloaded: libcfs]
      [232945.456006] 
      [232945.456006] Pid: 29361, comm: ll_ost_io00_002 Not tainted 2.6.32-debug #6 Bochs Bochs
      [232945.456006] RIP: 0010:[<ffffffffa07478fe>]  [<ffffffffa07478fe>] ldiskfs_ext_calc_credits_for_insert+0x2e/0x40 [ldiskfs]
      [232945.456006] RSP: 0018:ffff88005a53b620  EFLAGS: 00010212
      [232945.456006] RAX: 0000000000000001 RBX: ffff88005a53b790 RCX: 5a5a5a5a5a5a5a60
      [232945.456006] RDX: 0000000000000000 RSI: ffff8800147a7c80 RDI: ffff88002dae5b98
      [232945.456006] RBP: ffff88005a53b620 R08: ffff88005a53b790 R09: ffff8800147a7c80
      [232945.456006] R10: d84156c5635688c0 R11: 2222222222222222 R12: ffff88005a53b710
      [232945.456006] R13: ffff88002dae5b98 R14: ffff8800147a7c80 R15: 0000000000000001
      [232945.456006] FS:  00007f4c965c4700(0000) GS:ffff880006200000(0000) knlGS:0000000000000000
      [232945.456006] CS:  0010 DS: 0000 ES: 0000 CR0: 000000008005003b
      [232945.456006] CR2: 0000000000000002 CR3: 0000000084a56000 CR4: 00000000000006f0
      [232945.456006] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
      [232945.456006] DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
      [232945.456006] Process ll_ost_io00_002 (pid: 29361, threadinfo ffff88005a53a000, task ffff88005a538380)
      [232945.456006] Stack:
      [232945.456006]  ffff88005a53b6d0 ffffffffa02c7509 5a5a5a5a5a5a5a60 ffff88002dae5a90
      [232945.456006] <d> 0000000000000282 ffff88002dae5b88 ffff88002dae5a90 0000000000000011
      [232945.456006] <d> ffff8800147a7c80 ffff88002dae5a90 0000000000000000 ffff88002dae5b98
      [232945.456006] Call Trace:
      [232945.456006]  [<ffffffffa02c7509>] ldiskfs_ext_new_extent_cb+0x1b9/0x6c8 [fsfilt_ldiskfs]
      [232945.456006]  [<ffffffff8127c158>] ? call_rwsem_wake+0x18/0x30
      [232945.456006]  [<ffffffffa07496ef>] ldiskfs_ext_walk_space+0x14f/0x340 [ldiskfs]
      [232945.456006]  [<ffffffffa02c7350>] ? ldiskfs_ext_new_extent_cb+0x0/0x6c8 [fsfilt_ldiskfs]
      [232945.456006]  [<ffffffffa02c7078>] fsfilt_map_nblocks+0xd8/0x100 [fsfilt_ldiskfs]
      [232945.456006]  [<ffffffff81276936>] ? rwsem_wake+0x76/0x170
      [232945.456006]  [<ffffffffa02c71b3>] fsfilt_ldiskfs_map_ext_inode_pages+0x113/0x220 [fsfilt_ldiskfs]
      [232945.456006]  [<ffffffff811db553>] ? dquot_initialize+0xe3/0x1b0
      [232945.456006]  [<ffffffffa02c7345>] fsfilt_ldiskfs_map_inode_pages+0x85/0x90 [fsfilt_ldiskfs]
      [232945.456006]  [<ffffffffa077d283>] ? ldiskfs_dquot_initialize+0x73/0xc0 [ldiskfs]
      [232945.456006]  [<ffffffffa07e6307>] osd_write_commit+0x327/0x640 [osd_ldiskfs]
      [232945.456006]  [<ffffffffa09bdc8c>] ofd_commitrw_write+0x6cc/0x12a0 [ofd]
      [232945.456006]  [<ffffffffa09bec15>] ofd_commitrw+0x3b5/0x9c0 [ofd]
      [232945.456006]  [<ffffffffa08f66b8>] obd_commitrw+0x128/0x3d0 [ost]
      [232945.456006]  [<ffffffffa08fd84d>] ost_brw_write+0xe4d/0x1500 [ost]
      [232945.456006]  [<ffffffff8127a646>] ? vsnprintf+0x2b6/0x5f0
      [232945.456006]  [<ffffffffa104a300>] ? target_bulk_timeout+0x0/0xc0 [ptlrpc]
      [232945.456006]  [<ffffffffa0902a55>] ost_handle+0x3125/0x4550 [ost]
      [232945.456006]  [<ffffffffa0d873d4>] ? libcfs_id2str+0x74/0xb0 [libcfs]
      [232945.456006]  [<ffffffffa10989c3>] ptlrpc_server_handle_request+0x463/0xe70 [ptlrpc]
      [232945.456006]  [<ffffffffa0d7b66e>] ? cfs_timer_arm+0xe/0x10 [libcfs]
      [232945.456006]  [<ffffffffa1091691>] ? ptlrpc_wait_event+0xb1/0x2a0 [ptlrpc]
      [232945.456006]  [<ffffffff81051f73>] ? __wake_up+0x53/0x70
      [232945.456006]  [<ffffffffa109b4fd>] ptlrpc_main+0xb3d/0x18e0 [ptlrpc]
      [232945.495125]  [<ffffffffa109a9c0>] ? ptlrpc_main+0x0/0x18e0 [ptlrpc]
      [232945.495125]  [<ffffffff8100c14a>] child_rip+0xa/0x20
      [232945.495125]  [<ffffffffa109a9c0>] ? ptlrpc_main+0x0/0x18e0 [ptlrpc]
      [232945.495125]  [<ffffffffa109a9c0>] ? ptlrpc_main+0x0/0x18e0 [ptlrpc]
      [232945.495125]  [<ffffffff8100c140>] ? child_rip+0x0/0x20
      [232945.495125] Code: e5 0f 1f 44 00 00 48 85 f6 74 2a 0f b7 87 fe fe ff ff 48 8d 14 c5 00 00 00 00 48 c1 e0 06 48 29 d0 48 8b 54 30 28 b8 01 00 00 00 <0f> b7 4a 02 66 3b 4a 04 72 05 b8 18 00 00 00 c9 c3 90 55 48 89 
      

      Crashdump is in /exports/crashdumps/192.168.10.220-2012-12-30-10:34:18

            niu Niu Yawei (Inactive)
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: