LU-2555 fsfilt: fix race in ldiskfs_ext_new_extent_cb

In ext3_ext_new_extent_cb(), we should check if the 'path' is still
valid before accessing it.

Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: I04dada849a71228980501ab7eb1cc9ab71ca3782